add the publisher MVC, case didn't support unqiue validate of name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id='headlines'>
+
+  this is a headline
+
+</div>
+<div id='navigation'>
+  <li>one</li>
+  <li>two</li>
+  <li>three</li>
+  <li>four</li>
+</div>
 
 <%= yield %>
 
