--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,17 +1,64 @@
 <%= form_for(@book) do |f| %>
-  <% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+    <% if @book.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
 
-      <ul>
-      <% @book.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% @book.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div>
+      <%= f.label :title %> <br>
+      <%= f.text_field :title %>
     </div>
-  <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div>
+      <%= f.label :publisher %> <br>
+      <%= collection_select :book, :publisher_id, @publishers, :id, :name %>
+    </div>
+
+    <div>
+      <%= f.label :authors %> <br>
+      <%= select_tag 'book[author_ids][]',
+                     options_from_collection_for_select(@authors, :id, :name, @book.authors.collect { |author| author.id }),
+                     {:multiple => true, :size => 5} %>
+    </div>
+
+    <div>
+      <%= f.label :publisher_at %>
+      <%= date_select :book, :published_at %>
+    </div>
+
+
+    <div>
+      <%= f.label :ISBN %> <br>
+      <%= f.text_field :isbn  %>
+
+    </div>
+
+
+    <div>
+      <%= f.label :page_count %> <br>
+      <%= f.text_field :page_counter %>
+
+    </div>
+
+    <div>
+      <%= f.label :price %> <br>
+      <%= f.text_field :price %>
+    </div>
+
+
+    <div>
+      <%= f.label '束腰' %> <br>
+      <%= f.text_area :blurb %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
 <% end %>
