--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+
+<p>
+  <strong>Title:</strong>
+ <div><%= @book.title %></div>
+</p>
+
+
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
