God it's in a big mess try to fix

--- a/app/views/admin/publishers/index.html.erb
+++ b/app/views/admin/publishers/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= admin_publisher.name %></td>
         <td><%= link_to 'Show', admin_publisher %></td>
-        <td><%= link_to 'Edit', edit_admin_publisher_path(admin_publisher) %></td>
+        <td><%= link_to 'Edit', edit_publisher_path(admin_publisher) %></td>
         <td><%= link_to 'Destroy', admin_publisher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Publisher', new_admin_publisher_path %>
+<%= link_to 'New Publisher', new_publisher_path %>
