--- a/app/views/admin/publishers/edit.html.erb
+++ b/app/views/admin/publishers/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @admin_publisher %> |
-<%= link_to 'Back', admin_publishers_path %>
+<%= link_to 'Back', publishers_path %>
