--- a/app/views/admin/publishers/show.html.erb
+++ b/app/views/admin/publishers/show.html.erb
@@ -5,5 +5,5 @@
   <%= @admin_publisher.name %>
 </p>
 
-<%= link_to 'Edit', edit_admin_publisher_path(@admin_publisher) %> |
-<%= link_to 'Back', admin_publishers_path %>
+<%= link_to 'Edit', edit_publisher_path(@admin_publisher) %> |
+<%= link_to 'Back', publishers_path %>
