--- a/app/views/admin/authors/show.html.erb
+++ b/app/views/admin/authors/show.html.erb
@@ -10,5 +10,5 @@
   <%= @admin_author.last_name %>
 </p>
 
-<%= link_to 'Edit', edit_admin_author_path(@admin_author) %> |
-<%= link_to 'Back', admin_authors_path %>
+<%= link_to 'Edit', edit_author_path(@admin_author) %> |
+<%= link_to 'Back', authors_path %>
