--- a/app/views/admin/authors/edit.html.erb
+++ b/app/views/admin/authors/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @admin_author %> |
-<%= link_to 'Back', admin_authors_path %>
+<%= link_to 'Back', authors_path %>
