fix amdin/books controller

--- a/app/views/admin/books/_form.html.erb
+++ b/app/views/admin/books/_form.html.erb
@@ -18,7 +18,7 @@
 
     <div>
       <%= f.label :publisher %> <br>
-      <%= collection_select :book, :admin_publisher_id, @publishers, :id, :name %>
+      <%= collection_select :book, :publisher_id, @publishers, :id, :name %>
     </div>
 
     <div>
