--- a/app/views/admin/books/show.html.erb
+++ b/app/views/admin/books/show.html.erb
@@ -4,6 +4,10 @@
 <p>
   <strong>Title:</strong>
   <div><%= @book.title %></div>
+  <div>
+    <%= image_tag @book.cover_image.url() %>
+
+  </div>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
