show bookcover in index page

--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
+        <td><%= image_tag book.cover_image.url(:thumb)%></td>
         <td><%= book.title %></td>
         <td><%= book.isbn %></td>
         <td><%= link_to 'Show', book %></td>
