the ckeditor is working now. fix the instancetag problem in rails 4 by this link https://github.com/mjhoy/ckeditor/commit/fca24021e13d355f74c9538f9db27dc58687ce65

--- a/app/views/admin/books/_form.html.erb
+++ b/app/views/admin/books/_form.html.erb
@@ -59,7 +59,7 @@
 
     <div>
       <%= f.label '束腰' %> <br>
-      <%= f.text_area :blurb %>
+      <%= f.cktext_area :blurb , :class=>'ckeditor'%>
     </div>
 
     <div class="actions">
