--- a/app/views/admin/books/show.html.erb
+++ b/app/views/admin/books/show.html.erb
@@ -4,6 +4,11 @@
 <p>
   <strong>Title:</strong>
   <div><%= @book.title %></div>
+  <p>
+    <%= raw @book.category_list.map{ |tag|
+      link_to tag, tag_path(tag)
+    }.join(',')     %>
+  </p>
   <%= raw(@book.blurb) %>
 <div>
     <%= image_tag @book.cover_image.url(:medium) %>
