add a navgation bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,24 +2,26 @@
 <html>
 <head>
   <title> <%= @title||'Bookstore' %> </title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div id='headlines'>
-
-  this is a headline
-
+<div class="navbar navbar-fixed-top ">
+  <div class="navbar-inner">
+    <div class="container">
+      <div class="brand"> Books Store</div>
+      <ul class="nav">
+        <li><%= link_to :Books, books_path %></li>
+        <li><%= link_to :Publishers, publishers_path %></li>
+        <li><%= link_to :Authors, authors_path %></li>
+      </ul>
+    </div>
+  </div>
 </div>
-<div id='navigation'>
-  <li>one</li>
-  <li>two</li>
-  <li>three</li>
-  <li>four</li>
+<div class="container ">
+  <%= yield %>
 </div>
-
-<%= yield %>
 
 </body>
 </html>
