--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -1,25 +1,30 @@
-<h1>Listing books</h1>
+<div class="page-header">
+  <div class="inline">
+    <h1>All Books</h1>
+    <strong><%= 'tagged '+ @tag if @tag %></strong>
+  </div>
+</div>
 
 <table>
   <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
+  <tr>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @books.each do |book| %>
+  <% @books.each do |book| %>
       <tr>
-        <td><%= image_tag book.cover_image.url(:thumb)%></td>
+        <td><%= image_tag book.cover_image.url(:thumb) %></td>
         <td><%= book.title %></td>
         <td><%= book.isbn %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', book, method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
