modify new book button, put them in both start and end

--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -5,6 +5,8 @@
   </div>
 </div>
 
+<%= link_to 'Add a New Book', new_book_path, class: 'btn btn-large btn-success' %>
+
 <table>
   <thead>
   <tr>
@@ -27,7 +29,7 @@
   <% end %>
   </tbody>
 </table>
-
+<%= link_to 'Add a New Book', new_book_path, class: 'btn btn-large btn-success' %>
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+
