--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.book_cover_thumb{
+  max-width:100px;
+  max-height:100px;
+  overflow:hidden;
+}
