--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,21 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="navbar navbar-fixed-top ">
-  <div class="navbar-inner">
-    <div class="container">
-      <div class="brand"> Books Store</div>
-      <ul class="nav">
-        <li><%= link_to :Books, books_path %></li>
-        <li><%= link_to :Publishers, publishers_path %></li>
-        <li><%= link_to :Authors, authors_path %></li>
-      </ul>
+<div class='well'>
+  <div class="navbar navbar-fixed-top ">
+    <div class="navbar-inner">
+      <div class="container">
+        <div class="brand"> Books Store</div>
+        <ul class="nav">
+          <li><%= link_to :Books, books_path %></li>
+          <li><%= link_to :Publishers, publishers_path %></li>
+          <li><%= link_to :Authors, authors_path %></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
-<div class="container ">
-  <%= yield %>
-</div>
+  <div class="container ">
+    <%= yield %>
+  </div>
 
+</div>
 </body>
 </html>
