--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,15 @@
           <li><%= link_to :Publishers, publishers_path %></li>
           <li><%= link_to :Authors, authors_path %></li>
         </ul>
+
       </div>
     </div>
   </div>
   <div class="container ">
+    <p class="notice"><%= notice %></p>
+
+    <p class="alert"><%= alert %></p>
+
     <%= yield %>
   </div>
 
