add login manager nav item in nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,16 @@
           <li><%= link_to :Books, books_path %></li>
           <li><%= link_to :Publishers, publishers_path %></li>
           <li><%= link_to :Authors, authors_path %></li>
+          <li class='span5'></li>
+          <% if user_signed_in? %>
+              <li><a>Hello</a></li>
+              <li><%= link_to "#{current_user.first_name}-#{current_user.first_name}",edit_user_registration_path %></li>
+              <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+          <% else %>
+              <li><%= link_to "Sign up", new_user_registration_path %></li>
+              <li><%= link_to "sign in", new_user_session_path %></li>
+          <% end %>
+
         </ul>
 
       </div>
