--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,22 +19,24 @@
         </ul>
         <ul class="nav pull-right">
           <% if user_signed_in? %>
-              <li><%= link_to "#{current_user.first_name}-#{current_user.first_name}",edit_user_registration_path %></li>
+              <li><%= link_to "#{current_user.first_name}-#{current_user.first_name}", edit_user_registration_path %></li>
               <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
           <% else %>
               <li><%= link_to "Sign up", new_user_registration_path %></li>
               <li><%= link_to "Sign in", new_user_session_path %></li>
           <% end %>
         </ul>
-
       </div>
     </div>
   </div>
   <div class="container ">
-    <p class="notice"><%= notice %></p>
 
-    <p class="alert"><%= alert %></p>
-
+    <% flash.each do |type, message| %>
+        <div class="alert <%= flash_class type %>">
+          <button class="close" data-dismiss="alert">×</button>
+          <%= message %>
+        </div>
+    <% end %>
     <%= yield %>
   </div>
 
